Fix heading alignment

--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body > header {
 }
 
 h2, h3, h4, h5, h6 {
-  text-align: right;
+  text-align: left;
 }
 
 h1 {
